# word-hacker-404

./: .eslintrc.json  .firebaserc  .gitignore  ADOBE_QUALITY_ANALYSIS.md  AD_SYSTEM_FIX.md  AI_ACCESS_README.md  AI_MODEL_FACT_CHECK.md  AI_OVERSEER_DEV_GUIDE.md  AI_OVERSEER_PLAN.md  AI_STRATEGY_UPDATE.md  ARCHITECTURE.md  ARCHITECTURE_DOWNLOADER.md  BLACK_OPS_MANUAL.md  BUILD_ALL.ps1  CLIENT_HANDOFF_FINAL.md  COMPLETE_PROGRESS_REPORT.md  CRITICAL_TOKEN_FIX.md  CYBER_LAB_MASTER_PLAN.md  DEPLOY-WEBSITE.bat  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOY_DOWNLOADER.md  DOCUMENTATION_INDEX.md  ENHANCEMENT_AUTOMATION_PLAYBOOK.md  FINAL_HANDOFF.md  FINAL_PROJECT_STATUS.md  FINAL_SYSTEM_VERIFICATION.md  FIX_ICONS.ps1  FIX_LINKER_ERROR.ps1  GENERATE_ICONS.ps1  GRAMMARLY_VS_WORDHACKER.md  HANDOFF_TO_NEXT_AGENT.md  HELP_ME.txt  ICON_TOOL_PLAN.md  LAUNCH_CHECKLIST.md  LAUNCH_GOD_MODE.bat  LICENSE  M3_VALIDATION_REPORT.md  MAGIC_RELEASE.ps1  (+72 more)
.firebase/: hosting.ZGlzdA.cache
.github/: copilot-instructions.md
.github/workflows/: build-desktop.yml  build-libraw-wasm.yml  deploy.yml  harvester.yml
.vite/deps_temp_e79bfbea/: node-fetch.js  (+1 more)
Launch/: Open-Dashboard.bat  fresh-start-website.ps1  master-dashboard.ps1  smart-launch-gateway.ps1  smart-launch-replica.ps1  smart-launch-website.ps1
LibRaw-0.21.4/: libraw_wrapper.c
Release/: cyber-sentinel-edu_0.1.0_x64_en-US.msi
ai-gateway/: package-lock.json  package.json  wrangler.toml
assets/: index-54bb0e5e.css  index-b7044f2a.js  index.es-d1eb18a8.js  index.es-d1eb18a8.js.map  jspdf.es.min-82389a91.js  jspdf.es.min-82389a91.js.map  llm.worker-89b52568.js  llm.worker-89b52568.js.map  ort.min-f571ca7c.js  ort.min-f571ca7c.js.map  ort.webgpu.bundle.min-ea48514c.js  ort.webgpu.bundle.min-ea48514c.js.map  svg2pdf.es.min-d4bac280.js  svg2pdf.es.min-d4bac280.js.map  utils-e8ee15a8.js  utils-e8ee15a8.js.map  vectorizer.worker-bc7c8622.js  vectorizer.worker-bc7c8622.js.map  vendor-e72fc605.js  vendor-e72fc605.js.map
cyber-sentinel-edu/: BUILD_INSTALLER.bat  CHECK_HARDWARE.bat  CHECK_HARDWARE.ps1  CREATE_INSTALLER.ps1  DEPLOY_SCRIPTS.ps1  FIX_WSL_ERROR.bat  HANDOFF_TO_NEXT_AGENT.md  LAUNCH_APP.bat  LAUNCH_CYBER_SENTINEL.bat  OPEN_STORE_KALI.bat  README.md  SETUP_BLACK_OPS.ps1  USER_GUIDE.md  index.html  package-lock.json  package.json  vite.config.ts
cyber-sentinel-edu/src-tauri/: Cargo.toml  tauri.conf.json
cyber-sentinel-edu/src-tauri/icons/: icon.icns
cyber-sentinel-edu/src-tauri/src/: main.rs
desktop-app/: README.md  package-lock.json  package.json
desktop-downloader/: ADMOB_INTEGRATION_STRATEGY.md  ADSENSE_SETUP_GUIDE.md  ADVANCED_FREE_SCRAPING.md  AD_SYSTEM_CHECKLIST.md  AGENT_HANDOFF.md  AI_AGENT_GUIDE.md  AI_AGENT_INSTRUCTIONS.md  APPLE_SECURITY_STRATEGY.md  ARCHITECTURE_FOUNDATION.md  BLACK_OPS_EXECUTION_GUIDE.md  BLACK_OPS_IMPLEMENTATION_LOG.md  BLACK_OPS_MASTER_PLAN.md  CDM_BREACH_MANUAL.md  CLEANUP_COMPLETE.md  CLICK_HOVER_FIX.md  CLIENT_SETUP_GUIDE.md  CLOUDFLARE_INTEGRATION_COMPLETE.md  CLOUDFLARE_STEP_BY_STEP.md  CURRENT_STATUS.md  EXPORT_SYSTEM_REFERENCE.md  FEATURES.md  FIX_RUST_ERROR.md  FIX_SUMMARY.md  FIX_THUMBNAIL_AND_4K.md  FREE_CODE_SIGNING_GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  INSTAGRAM_FIX_GUIDE.md  LAUNCH.bat  LAUNCH_READY.md  METADATA_OVERLAY_PATCH.md  METADATA_REBUILD_COMPLETE.md  MONETIZATION_ROADMAP.md  MONETIZATION_SETUP.md  NEXT_GEN_ARCHITECTURE.md  NON_CODER_GUIDE.md  ONE_CLICK_RELEASE_GUIDE.md  PHASE3_ADMOB_IMPLEMENTATION.md  PHASE_1_QUICKSTART.md  (+51 more)
desktop-downloader/src-tauri/: Cargo.toml  tauri.conf.json
desktop-downloader/src-tauri/src/: ad_manager.rs  cloudflare.rs  license.rs  main.rs  oembed.rs  orchestrator.rs  security.rs
desktop-downloader/src-tauri/src/services/: cdm.rs  decryptor.rs  ffmpeg_merger.rs  license_signer.rs  mod.rs  mpd_parser.rs  swarm.rs  udemy_api.rs
downloads/: No LOVE❤️‍🩹😭 #bangla #comedy #shorts.f140.m4a
installer-stub/: Cargo.toml
installer-stub/src/: main.rs
public/: CNAME  manifest.json
replica-studio/: DEV_ROADMAP.md  HQ_BLUEPRINT.md  next.config.ts  package-lock.json  package.json  remotion.config.ts
scripts/: integration-test.js
src/: App.css  App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: black_ops.rs  ipc_client.rs  lib.rs  security.rs  service_main.rs  trash_hunter.rs
telegram-bot/: .env.example  README.md  bot.py
temp/: test.js
trash-hunter/: AI_AGENT_HANDOFF.md  CLOUD_COST_STRATEGY.md  GOD_MODE_ARCHITECT_PLAN.md  ICON_DESIGN_GUIDE.md  ONE-CLICK-RELEASE.ps1  OPTIMIZATION_LOCK.md  PROFESSIONAL_ARCHITECTURE_PLAN.md  SECURITY_AUDIT_ROUND_1.md  START-AI-OVERSEER.bat  START-SMART-DEV.bat  ULTIMATE_AI_CLEANER_PLAN.md  download-fallback.cjs  download-model.cjs  download-model.js  download_model.ps1  elite_indexing_plan.md  index.html  package-lock.json  package.json  protection_plan.md  tailwind.config.js  vite.config.ts
trash-hunter/src-tauri/: 2  Cargo.toml  build_check.txt  build_final.txt  build_log.txt  build_log_2.txt  build_log_3.txt  build_log_4.txt  build_log_5.txt  build_log_6.txt  build_log_7.txt  build_log_8.txt  build_log_9.txt  error.txt  search_debug.txt  tauri.conf.json
trash-hunter/src-tauri/capabilities/: default.json
trash-hunter/src-tauri/src/: lazy_engine.rs  lib.rs  main.rs  usn_engine.rs
wasm/: README.txt
(+213 files in other folders)
