[package]
name = "wh404-installer"
version = "1.0.0"
edition = "2021"
description = "Smart Stub Installer for Word Hacker 404"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6"
dirs = "5.0"
indicatif = "0.17" # For beautiful progress bars
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
winapi = { version = "0.3", features = ["winuser", "shellapi"] } # For creating shortcuts/launching

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
strip = true
