[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
sysinfo = "0.30"
windows-service = "0.7"
thiserror = "1.0"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
windows = { version = "0.52", features = ["Win32_System_Pipes", "Win32_Foundation"] }

[[bin]]
name = "app"
path = "src/main.rs"

[[bin]]
name = "trash-hunter-service"
path = "src/service_main.rs"
