[package]
name = "trash-hunter"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "trash_hunter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.0.0"
opener = { version = "0.7", features = ["reveal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = "0.4"
jwalk = "0.8"
sysinfo = "0.30"
open = "5"
rayon = "1.8"
ignore = "0.4.25"
regex = "1.12.2"
strsim = "0.11"
usn-journal-rs = "0.4.0"
once_cell = "1.18"
bincode = "1.3"
serde_bytes = "0.11.19"
reqwest = { version = "0.12.25", features = ["json"] }
arboard = "3"
fs_extra = "1.3"
base64 = "0.22"
image = "0.25"
dirs = "6.0.0"
sha2 = "0.10"
hex = "0.4"
rfd = "0.14"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
]
